# Enclave

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
backend/: Dockerfile  Dockerfile.dev  pyproject.toml
backend/alembic/: env.py
backend/src/: config.py  main.py
frontend/: Dockerfile  Dockerfile.dev  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
infra/ollama/: pull-models.sh
infra/postgres/: init.sql
scripts/: backup-db.sh  health-check.py  seed-admin.py  setup-labels.py
