[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "enclave-backend"
version = "0.1.0"
description = "Enclave — Local-first Enterprise Knowledge Agent"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pgvector>=0.3",
    # Config
    "pydantic-settings>=2.3",
    # Auth
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    # HTTP client (Ollama, webhooks)
    "httpx>=0.27",
    # AI SDKs
    "openai>=1.35",
    "anthropic>=0.30",
    # Document extraction
    "pymupdf>=1.24",
    "python-docx>=1.1",
    # Token counting
    "tiktoken>=0.7",
    # Rate limiting
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
prod = []
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
